force-app/main/default/objects/Hitos_de_Promocion__c/Hitos_de_Promocion__c.object-meta.xml
<CustomObject>
    <label>Hitos de Promoción</label>
    <nameField>
        <label>Hitos de Promoción</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hitos de Promoción</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>