force-app/main/default/objects/Hitos_de_Promocion__c/fields/Adquisicion_del_suelo__c.field-meta.xml
<CustomField>
    <fullName>Adquisicion_del_suelo__c</fullName>
    <label>Adquisición del suelo</label>
    <type>Date</type>
</CustomField>