force-app/main/default/objects/Hitos_de_Promocion__c/fields/Apertura_de_promocion__c.field-meta.xml
<CustomField>
    <fullName>Apertura_de_promocion__c</fullName>
    <label>Apertura de promoción</label>
    <type>Date</type>
</CustomField>