force-app/main/default/objects/Hitos_de_Promocion__c/fields/Aprobacion_de_la_licencia_de_obras__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_de_la_licencia_de_obras__c</fullName>
    <label>Aprobación de la licencia de obras</label>
    <type>Date</type>
</CustomField>