force-app/main/default/objects/Hitos_de_Promocion__c/fields/Aprobacion_de_LPO__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_de_LPO__c</fullName>
    <label>Aprobación de LPO</label>
    <type>Date</type>
</CustomField>