force-app/main/default/objects/Hitos_de_Promocion__c/fields/avance_adquisicion_suelo__c.field-meta.xml
<CustomField>
    <fullName>avance_adquisicion_suelo__c</fullName>
    <label>% Avance Adquisición del suelo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>