force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_Aprobacion_licencia_obras__c.field-meta.xml
<CustomField>
    <fullName>Avance_Aprobacion_licencia_obras__c</fullName>
    <label>% Avance Aprobación licencia obras</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>