force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_CFO_visado__c.field-meta.xml
<CustomField>
    <fullName>Avance_CFO_visado__c</fullName>
    <label>% Avance CFO visado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>