force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_Comite_de_lanzamiento__c.field-meta.xml
<CustomField>
    <fullName>Avance_Comite_de_lanzamiento__c</fullName>
    <label>% Avance Comité de lanzamiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>