force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_Comite_entrega_promo__c.field-meta.xml
<CustomField>
    <fullName>Avance_Comite_entrega_promo__c</fullName>
    <label>% Avance Comité entrega promo.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>