force-app/main/default/objects/Hitos_de_Promocion__c/fields/avance_entrega_infografia__c.field-meta.xml
<CustomField>
    <fullName>avance_entrega_infografia__c</fullName>
    <label>% Avance Entrega infografía</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>