force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_Entrega_proyecto_basico__c.field-meta.xml
<CustomField>
    <fullName>Avance_Entrega_proyecto_basico__c</fullName>
    <label>% Avance Entrega proyecto básico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>