force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_Firma_prestamo_promotor__c.field-meta.xml
<CustomField>
    <fullName>Avance_Firma_prestamo_promotor__c</fullName>
    <label>% Avance Firma préstamo promotor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>