force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_Informe_AESA__c.field-meta.xml
<CustomField>
    <fullName>Avance_Informe_AESA__c</fullName>
    <label>% Avance Informe AESA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>