force-app/main/default/objects/Hitos_de_Promocion__c/fields/avance_inicio_com__c.field-meta.xml
<CustomField>
    <fullName>avance_inicio_com__c</fullName>
    <label>% Avance Inicio Comer.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>