force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_Inicio_de_Pre_comercializacion__c.field-meta.xml
<CustomField>
    <fullName>Avance_Inicio_de_Pre_comercializacion__c</fullName>
    <label>% Avance Inicio de Pre-comercializacion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>