force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_Inicio_Escrituraciones__c.field-meta.xml
<CustomField>
    <fullName>Avance_Inicio_Escrituraciones__c</fullName>
    <label>% Avance Inicio Escrituraciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>