force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_Objetivo_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>Avance_Objetivo_de_ventas__c</fullName>
    <label>% Avance Objetivo de ventas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>