force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_Solicitud_de_licencia_de_obras__c.field-meta.xml
<CustomField>
    <fullName>Avance_Solicitud_de_licencia_de_obras__c</fullName>
    <label>% Avance Solicitud de licencia de obras</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>