force-app/main/default/objects/Hitos_de_Promocion__c/fields/Avance_Solicitud_licencia_casetas__c.field-meta.xml
<CustomField>
    <fullName>Avance_Solicitud_licencia_casetas__c</fullName>
    <label>% Avance Solicitud licencia casetas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>