force-app/main/default/objects/Hitos_de_Promocion__c/fields/BC__c.field-meta.xml
<CustomField>
    <fullName>BC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC</label>
    <type>Checkbox</type>
</CustomField>