force-app/main/default/objects/Hitos_de_Promocion__c/fields/Certificado_Final_de_obra_CFO_visado__c.field-meta.xml
<CustomField>
    <fullName>Certificado_Final_de_obra_CFO_visado__c</fullName>
    <label>Certificado Final de obra (CFO) visado</label>
    <type>Date</type>
</CustomField>