force-app/main/default/objects/Hitos_de_Promocion__c/fields/Comite_cierre_promocion__c.field-meta.xml
<CustomField>
    <fullName>Comite_cierre_promocion__c</fullName>
    <label>Comité cierre promoción</label>
    <type>Date</type>
</CustomField>