force-app/main/default/objects/Hitos_de_Promocion__c/fields/Comite_de_lanzamiento__c.field-meta.xml
<CustomField>
    <fullName>Comite_de_lanzamiento__c</fullName>
    <label>Comité de lanzamiento</label>
    <type>Date</type>
</CustomField>