force-app/main/default/objects/Hitos_de_Promocion__c/fields/Comite_entrega_promocion__c.field-meta.xml
<CustomField>
    <fullName>Comite_entrega_promocion__c</fullName>
    <label>Comité entrega promoción</label>
    <type>Date</type>
</CustomField>