force-app/main/default/objects/Hitos_de_Promocion__c/fields/EmailPlanificacion__c.field-meta.xml
<CustomField>
    <fullName>EmailPlanificacion__c</fullName>
    <description>Almacena el email del usuario de planificacion relacionado a la promocion</description>
    <label>EmailPlanificacion</label>
    <type>Email</type>
</CustomField>