force-app/main/default/objects/Hitos_de_Promocion__c/fields/Entrega_anteproyecto__c.field-meta.xml
<CustomField>
    <fullName>Entrega_anteproyecto__c</fullName>
    <label>Entrega anteproyecto</label>
    <type>Date</type>
</CustomField>