force-app/main/default/objects/Hitos_de_Promocion__c/fields/Entrega_Infografia__c.field-meta.xml
<CustomField>
    <fullName>Entrega_Infografia__c</fullName>
    <label>Entrega Infografía</label>
    <type>Date</type>
</CustomField>