force-app/main/default/objects/Hitos_de_Promocion__c/fields/Entrega_proyecto_basico__c.field-meta.xml
<CustomField>
    <fullName>Entrega_proyecto_basico__c</fullName>
    <label>Entrega proyecto básico</label>
    <type>Date</type>
</CustomField>