force-app/main/default/objects/Hitos_de_Promocion__c/fields/Entrega_proyecto_de_ejecucion__c.field-meta.xml
<CustomField>
    <fullName>Entrega_proyecto_de_ejecucion__c</fullName>
    <label>Entrega proyecto de ejecución</label>
    <type>Date</type>
</CustomField>