force-app/main/default/objects/Hitos_de_Promocion__c/fields/Fin_comercializacion_prevista__c.field-meta.xml
<CustomField>
    <fullName>Fin_comercializacion_prevista__c</fullName>
    <label>Fin comercialización prevista</label>
    <type>Date</type>
</CustomField>