force-app/main/default/objects/Hitos_de_Promocion__c/fields/Fin_de_obra__c.field-meta.xml
<CustomField>
    <fullName>Fin_de_obra__c</fullName>
    <label>Fin de obra</label>
    <type>Date</type>
</CustomField>