force-app/main/default/objects/Hitos_de_Promocion__c/fields/Firma_del_prestamo_promotor__c.field-meta.xml
<CustomField>
    <fullName>Firma_del_prestamo_promotor__c</fullName>
    <label>Firma del préstamo promotor</label>
    <type>Date</type>
</CustomField>