force-app/main/default/objects/Hitos_de_Promocion__c/fields/Informe_AESA__c.field-meta.xml
<CustomField>
    <fullName>Informe_AESA__c</fullName>
    <label>Informe AESA</label>
    <type>Date</type>
</CustomField>