force-app/main/default/objects/Hitos_de_Promocion__c/fields/Inicio_de_comercializacion_real__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_comercializacion_real__c</fullName>
    <label>Inicio de comercialización</label>
    <type>Date</type>
</CustomField>