force-app/main/default/objects/Hitos_de_Promocion__c/fields/Inicio_de_obra__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_obra__c</fullName>
    <label>Inicio de obra</label>
    <type>Date</type>
</CustomField>