force-app/main/default/objects/Hitos_de_Promocion__c/fields/Inicio_escrituraciones__c.field-meta.xml
<CustomField>
    <fullName>Inicio_escrituraciones__c</fullName>
    <label>Inicio escrituraciones</label>
    <type>Date</type>
</CustomField>