force-app/main/default/objects/Hitos_de_Promocion__c/fields/Objetivo_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_de_ventas__c</fullName>
    <label>Objetivo de ventas</label>
    <type>Date</type>
</CustomField>