force-app/main/default/objects/Hitos_de_Promocion__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <label>Promocion</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Hitos de Promoción</relationshipLabel>
    <relationshipName>Hitos_de_Promocion</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>