force-app/main/default/objects/Hitos_de_Promocion__c/fields/Solicitud_de_la_licencia_de_obras__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_la_licencia_de_obras__c</fullName>
    <label>Solicitud de la licencia de obras</label>
    <type>Date</type>
</CustomField>