force-app/main/default/objects/Hitos_de_Promocion__c/fields/Solicitud_de_LPO__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_LPO__c</fullName>
    <label>Solicitud de LPO</label>
    <type>Date</type>
</CustomField>