force-app/main/default/objects/Hitos_de_Promocion__c/fields/Solicitud_licencia_casetas__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_licencia_casetas__c</fullName>
    <label>Solicitud licencia casetas</label>
    <type>Date</type>
</CustomField>