force-app/main/default/objects/Hitos_de_Promocion__c/fields/V0__c.field-meta.xml
<CustomField>
    <fullName>V0__c</fullName>
    <defaultValue>false</defaultValue>
    <label>V0</label>
    <type>Checkbox</type>
</CustomField>