force-app/main/default/objects/Hitos_de_Promocion__c/fields/V1__c.field-meta.xml
<CustomField>
    <fullName>V1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>V1</label>
    <type>Checkbox</type>
</CustomField>